--- a/mgmtsystem_nonconformity/views/mgmtsystem_nonconformity.xml
+++ b/mgmtsystem_nonconformity/views/mgmtsystem_nonconformity.xml
@@ -1,10 +1,8 @@
 <odoo>
-<data>
-
-  <menuitem id="menu_mgmtsystem_configuration_nonconformities"
+  <menuitem id="menu_mgmtsystem_configuration_nonconformities" 
     name="Nonconformities"
     parent="mgmtsystem.menu_mgmtsystem_configuration"
-    groups="mgmtsystem.group_mgmtsystem_manager"
+    groups="mgmtsystem.group_mgmtsystem_manager" 
     sequence="10"/>
 
   <record id="view_mgmtsystem_nonconformity_tree" model="ir.ui.view">
@@ -35,12 +33,12 @@
         <group>
           <filter name="draft" icon="terp-document-new" domain="[('state','=','draft')]" string="Draft" help="Draft/New nonconformities"/>
           <filter name="pending" icon="terp-gtk-media-pause" domain="[('state','in',['analysis','pending'])]" string="Analysis" help="Nonconformities pending review"/>
-          <filter name="current" icon="terp-check" domain="[('state','=','open')]" string="In Progress" help="Open Nonconformities"/>
+          <filter name="current" icon="fa-check" domain="[('state','=','open')]" string="In Progress" help="Open Nonconformities"/>
           <filter icon="terp-camera_test" domain="[('state','=','done')]" string="Closed" help="Closed Nonconformities"/>
           <separator orientation="vertical"/>
           <field name="ref"/>
           <field name="create_date"/>
-          <field name="user_id" string="User"
+          <field name="user_id" string="User" 
             filter_domain="['|','|',('user_id','=',uid),('responsible_user_id','=',uid),('manager_user_id','=',uid)]" />
           <field name="system_id"/>
           <field name="company_id" groups="base.group_multi_company"/>
@@ -54,12 +52,12 @@
           <filter string="System" icon="gtk-execute" context="{'group_by':'system_id'}"/>
           <filter string="Partner" icon="terp-personal+" domain="[]" context="{'group_by':'partner_id'}"/>
           <filter string="Procedure" icon="terp-stock_symbol-selection" context="{'group_by':'procedure_ids'}"/>
-          <!--
+
           <separator orientation="vertical"/>
           <filter string="Origin" icon="terp-idea" context="{'group_by':'origin_ids'}"/>
           <filter string="Cause" icon="gtk-convert" context="{'group_by':'cause_ids'}"/>
           <filter string="Severity" icon="stock_log" context="{'group_by':'severity_id'}"/>
-          -->
+
         </group>
         </search>
       </field>
@@ -119,17 +117,17 @@
       <field name="name">mgmtsystem.nonconformity.form</field>
       <field name="model">mgmtsystem.nonconformity</field>
       <field name="arch" type="xml">
-        <form string="Non-Conformity" version="7.0">
+        <form string="Non-Conformity" version="10.0">
           <header>
-            <field name="stage_id" widget="statusbar" clickable="True" />
-            <field name="state" invisible="True" />
+            <field name="stage_id" widget="statusbar" clickable="False"/>
+            <field name="state" invisible="True"/>
           </header>
           <sheet string="Non-Conformity">
             <field name="kanban_state" widget="kanban_state_selection" />
             <group>
               <group>
-                <field name="name" attrs="{'readonly':[('state','not in',['draft'])]}"/>
                 <field name="ref" attrs="{'readonly':[('state','not in',['draft'])]}"/>
+                <field name="name" attrs="{'readonly':[('state','not in',['draft'])]}"/>
                 <field name="create_date" attrs="{'readonly':[('state','not in',['draft'])]}"/>
                 <field name="partner_id" attrs="{'readonly':[('state','not in',['draft','analysis'])]}"/>
                 <field name="reference" attrs="{'readonly':[('state','not in',['draft'])]}"/>
@@ -156,7 +154,7 @@
 
               <page string="Causes and Analysis" attrs="{'invisible':[('state','in',['draft','cancel'])]}">
                 <separator string="Analysis"/>
-                <field name="analysis" attrs="{'readonly':[('state','not in',['analysis'])]}"/>
+                <field name="analysis" attrs="{'readonly':[('state','not in',['analysis'])], 'required':[('state','in',['analysis','pending','open'])]}"/>
 
                 <separator string="Causes"/>
                 <field name="cause_ids" attrs="{'readonly':[('state','not in',['analysis'])]}"/>
@@ -175,16 +173,18 @@
                 <field name="action_ids" attrs="{'readonly':[('state','not in',['pending'])]}"/>
 
                 <group string="Plan Review">
-                 <group>
-                   <field name="action_comments" attrs="{'readonly':[('state','not in',['pending'])]}" nolabel="1" placeholder="Action Plan Comments"/>
-                 </group>
-               </group>
+                  <group>
+                    <field name="action_comments" attrs="{'readonly':[('state','not in',['pending'])], 'required':[('state','in',['pending'])]}" nolabel="1" placeholder="Action Plan Comments"/>
+                  </group>
+                </group>
+              </page>
 
-               <group attrs="{'invisible':[('state','not in',['open','done'])]}" string="Effectiveness Review">
-                 <group>
-                   <field name="evaluation_comments" attrs="{'readonly':[('state','not in',['open'])]}" nolabel="1" placeholder="Evaluation Comments"/>
-                 </group>
-             </group>
+               <page string="Evaluation" attrs="{'invisible':[('state','not in',['evaluation','done'])]}" >
+                <group string="Effectiveness Evaluation">
+                  <group>
+                    <field name="evaluation_comments" attrs="{'readonly':[('state','not in',['evaluation'])]}" nolabel="1" placeholder="Evaluation Comments"/>
+                  </group>
+                </group>
               </page>
 
             </notebook>
@@ -194,7 +194,6 @@
             <field name="message_follower_ids" widget="mail_followers" groups="base.group_user"/>
             <field name="message_ids" widget="mail_thread"/>
           </div>
-
         </form>
       </field>
     </record>
@@ -210,11 +209,10 @@
     </record>
 
     <menuitem
-      id="menu_open_nonconformity"
-      action="open_mgmtsystem_nonconformity_list"
-      parent="mgmtsystem.menu_mgmtsystem_main"
-      sequence="30"
+      id="menu_open_nonconformity" 
+      action="open_mgmtsystem_nonconformity_list" 
+      parent="mgmtsystem.menu_mgmtsystem_main" 
+      sequence="20" 
       groups="mgmtsystem.group_mgmtsystem_manager,mgmtsystem.group_mgmtsystem_auditor,base.group_user"/>
 
-  </data>
 </odoo>
